--- a/app/Resources/views/sidebar.html.twig
+++ b/app/Resources/views/sidebar.html.twig
@@ -1,6 +1,7 @@
 <div class="navbar-default sidebar" role="navigation">
     <div class="sidebar-nav navbar-collapse">
         <ul class="nav" id="side-menu">
+            {% block product_menu %}
             <li>
                 <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> محصولات<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
@@ -24,6 +25,8 @@
                 </ul>
                 <!-- /.nav-second-level -->
             </li>
+            {% endblock %}
+            {% block user_menu %}
             <li>
                 <a href="#"><i class="fa fa-wrench fa-fw"></i> مدیریت کاربران<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
@@ -36,6 +39,7 @@
                 </ul>
                 <!-- /.nav-second-level -->
             </li>
+            {% endblock %}
         </ul>
     </div>
     <!-- /.sidebar-collapse -->
