--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -302,7 +302,7 @@
                                     <a href="#">افزودن کاربر</a>
                                 </li>
                                 <li>
-                                    <a href="#">نمایش کاربران</a>
+                                    <a href="{{ path('user_index') }}">نمایش کاربران</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
