--- a/app/Resources/views/user/index.html.twig
+++ b/app/Resources/views/user/index.html.twig
@@ -1,12 +1,27 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}نمایش دسته بندی ها{% endblock %}
+{% block title %}نمایش کاربران{% endblock %}
+
+{% block user_menu %}
+    <li class="active">
+        <a href="#"><i class="fa fa-wrench fa-fw"></i> مدیریت کاربران<span class="fa arrow"></span></a>
+        <ul class="nav nav-second-level">
+            <li>
+                <a href="#">افزودن کاربر</a>
+            </li>
+            <li>
+                <a class="active" href="#">نمایش کاربران</a>
+            </li>
+        </ul>
+        <!-- /.nav-second-level -->
+    </li>
+{% endblock %}
 
 {% block container %}
     <div class="row">
         <div class="col-lg-12">
             <div class="panel panel-default">
-                <div class="panel-heading">جدول نمایش دسته بندی ها</div>
+                <div class="panel-heading">جدول نمایش کاربران</div>
                 <!-- /.panel-heading -->
                 <div class="panel-body">
                     <div class="table-responsive">
